L8 Serialization init commit - implemeted toJson method, test