@@ -23,7 +23,8 @@ public class ReflectionHelper {
     public static <T> T instantiate(Class<T> type, Object... args) {
         try {
             if (args.length == 0) {
-                return type.newInstance();
+//                return type.getDeclaredConstructor().newInstance();
+                return type.newInstance(); // deprecated
             } else {
                 return type.getConstructor(toClasses(args)).newInstance(args);
             }
